hphp/hack/test/typecheck/akempty/akempty_promotion_0.php.exp
File "akempty_promotion_0.php", line 10, characters 5-6:
Invalid argument (Typing[4110])
File "akempty_promotion_0.php", line 13, characters 12-14:
Expected int
File "akempty_promotion_0.php", line 9, characters 3-6:
But got varray<(string | nothing)> because a value is appended to it
